fixed patient scrollbar issue

--- a/KVfiles/kv.css
+++ b/KVfiles/kv.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 /* TODO 
-         3) no auto scroll when you click on a dropdown
+         3) make dialogs look pretty
          4) search thingy
          5) change background/tab/calendar colors
          6) clean up code (if time)
@@ -12,6 +12,11 @@
   DONE
   1) fix calendar formatting (weird stuff still with it like when you toggle days),
   2) min window width (deal with resizing) --> fix navbar (weird things...),
+  3) add scroll for patient list?
+
+  POSSIBLE ADDITIONS
+  1) drag+drop, delete functions directly on calendar
+  2) autocomplete for dialog?
 */
 body {
   font-family: 'Open Sans';
@@ -24,10 +29,10 @@ body {
 
 }
 
-.sub {
+/*.sub {
   font-size: 1em;
   color : #999;
-}
+}*/
 
 .appt_icon {
   margin-right: 5px;
@@ -43,13 +48,18 @@ body {
     color: #999;
 }
 
-#calendarTab:hover{
+/*#calendarTab:hover{
   cursor: pointer;
   background-color:#000;
   }
 #patientTab:hover{
   cursor: pointer;
   background-color:#000;
+}*/
+
+li > a.viewTab:hover{
+  cursor: pointer;
+  background-color:#CCC;
 }
 
 .navbar-inverse .nav .active>a, .navbar-inverse .nav .active>a:hover, .navbar-inverse .nav .active>a:focus{
@@ -137,7 +147,7 @@ li.appointment{
 }
 li.patient:hover {
   cursor: pointer;
-  background-color: #999;
+  background-color: #ccc;
 }
 ul
 {
@@ -156,6 +166,7 @@ p.time-heading{
 }
 .navbar{
   border:none;
+  padding: 0px;
   background-color: #000;
   font-color:black;
 
@@ -502,10 +513,10 @@ label {
   margin-top:0px;
 }
 
-#cal_title, #title1, #title2 {
+#title1, #title2 { /*title1 is patient title, title2 is "Choose a Patient" title*/
   font-size: 45px;
-  margin: 0px;
-  padding-bottom: 30px; /*default for page-header is 9px*/
+  margin-top: .5em;
+  /*default for page-header is 9px*/
 }
 
 #freedommain {
@@ -540,6 +551,7 @@ label {
 
 .sidebar{
   padding: 0px;
+  overflow-y: scroll;
 }
 
 .nopadding{
